# djstory

./: README.md  manage.py  pyproject.toml
accounts/: forms.py  urls.py  views.py
djstory/: asgi.py  settings.py  urls.py  wsgi.py
story/: admin.py  models.py  urls.py  views.py
story/migrations/: 0001_initial.py  0002_alter_chapter_options_and_more.py  0003_alter_chapter_options_alter_story_title.py
templates/accounts/: index.html
templates/base/: base.html  navbar.html
templates/story/: chapter_detail.html  index.html  latest_story.html  story_detail.html
