[tool.poetry]
name = "djstory"
version = "0.1.0"
description = "This will be story sharing site"
authors = ["Exoutia <jhav365@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.2"
django-taggit = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
